build: update jakarta and remove javax